[package]
name = "tokio-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
rsa = "0.6.0"
rand = "0.8.5"